# django-dynamic-admin

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README.md  Readme.md  SECURITY.md  pyproject.toml  requirements.txt  settings.py  setup.cfg  tox.ini  urls.py
.ambient-package-update/: metadata.py
.ambient-package-update/templates/snippets/: content.tpl  installation.tpl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  quality-gate.yml  release.yml
django_dynamic_admin_forms/: __init__.py  admin.py  apps.py  urls.py
django_dynamic_admin_forms/templates/admin/: change_form.html
docs/: conf.py  index.rst
docs/features/: changelog.rst
dynamic_admin/: admin.py  apps.py  urls.py
dynamic_admin/static/js/: dynamic_admin.js
dynamic_admin/templates/admin/: change_form.html
dynamic_admin_forms/: __init__.py  admin.py  urls.py
dynamic_admin_forms/static/js/: dynamic_admin.js
dynamic_admin_forms/templates/admin/: change_form.html
e2e/: cypress.json  package.json
e2e/cypress/integration/: dynamic-select.spec.js
e2e/cypress/support/: paths.js
fixtures/: fixtures-dev.json
testapp/: admin.py  apps.py  models.py  urls.py
testapp/migrations/: 0002_extend_example.py  0004_skill_customer_skills.py
testproj/config/: asgi.py  settings.py  urls.py  wsgi.py
testproj/testapp/: admin.py  apps.py  models.py
testproj/testapp/migrations/: 0001_initial.py  0003_example_file_field.py
tests/: test_admin_unit.py  test_dummy.py
