[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-dynamic-admin"
authors = [{name = "Fabian Binz", email = "fabian.binz@ambient.digital"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "django ~=3.2",
]

[project.optional-dependencies]
lint = [
    "black ==21.9b0"
]

[tool.flit.module]
name = "dynamic_admin"

[project.urls]
Home = "https://ambient.digital"
